--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<tbody>
 		<table border="1">
 			<tr>
-				<td><img src="C:\Users\Avanade\Desktop\PORTFOLIO\Gabriel.png" height="200px" alt="imagem html"></td>
+				<td><img src="Gabriel.png" height="200px" alt="imagem html"></td>
 				<td>
 
 					<p>Desenvolvendo Front e Back end utilizando as tecnologias : Asp.Net MVC 5 e MySql 6.3</p>
